<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test Acreda</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Search</string>
    <string name="open_map">Map</string>
    <string name="open_web">Web</string>
    <string name="send_email">Email</string>
    <string name="create_event">Event</string>
    <string name="use_chooser">Chooser</string>
    <string name="get_number">Number</string>
    <string name="make_call">Call</string>
    <string name="share_text">Share Text</string>
    <string name="share_image">Share Image</string>
    <string name="share_content">Share Content</string>
    <string name="first_shared_image">First Shared Image</string>
    <string name="filter_btn">Gray</string>
    <string name="save_btn">Save</string>
</resources>
