<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="16dp"
	    android:paddingRight="16dp"
	    android:orientation="vertical"
	    tools:context=".DisplayMessageActivity" >
	
	    <TextView
	        android:id="@+id/number"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/hello_world" />
	    
	    <Button 
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
		    android:text="@string/make_call" 
		    android:onClick="makeCall" 
	    />
	    
	    <Button
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/open_map"
		        android:onClick="openMap" />
	    
	     <Button
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/open_web"
		        android:onClick="openWeb" />
	     
	      <Button
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/send_email"
		        android:onClick="sendEmail" />
	      
	       <Button
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/create_event"
		        android:onClick="createEvent" />
	       
	       <Button
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/use_chooser"
		        android:onClick="useChooser" />
	       
	       <Button 
	           android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/get_number"
		       android:onClick="pickContact"  />
	       
	       <Button 
	           android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/share_text"
		       android:onClick="shareText"  />
	       
	       <Button 
	           android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/share_image"
		       android:onClick="shareImage"  />
	       
	       <Button 
	           android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/share_content"
		       android:onClick="shareContent"  />
	
	</LinearLayout>

</ScrollView>
